--- a/gallery.html
+++ b/gallery.html
@@ -19,61 +19,11 @@
         <section class="full-gallery">
             <div class="container">
                 <div class="full-gallery-header">
-                    <h1>Galería completa</h1>
-                    <p class="muted">Todas las fotos del evento</p>
+                    <h1 id="gallery-title">Galería completa</h1>
+                    <p class="muted" id="gallery-description">Todas las fotos del evento</p>
                 </div>
                 <div class="full-gallery-grid">
-                    
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1294.JPG" alt="IMG_1294"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1306.JPG" alt="IMG_1306"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1353.JPG" alt="IMG_1353"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1354.JPG" alt="IMG_1354"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1363.JPG" alt="IMG_1363"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1366.JPG" alt="IMG_1366"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1373.JPG" alt="IMG_1373"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1374.JPG" alt="IMG_1374"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1376.JPG" alt="IMG_1376"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1378.JPG" alt="IMG_1378"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1379.JPG" alt="IMG_1379"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1387.JPG" alt="IMG_1387"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1389.JPG" alt="IMG_1389"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1390.JPG" alt="IMG_1390"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1396.JPG" alt="IMG_1396"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1397.JPG" alt="IMG_1397"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1398.JPG" alt="IMG_1398"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1408.JPG" alt="IMG_1408"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1415.JPG" alt="IMG_1415"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1416.JPG" alt="IMG_1416"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1454.JPG" alt="IMG_1454"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1457.JPG" alt="IMG_1457"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1458.JPG" alt="IMG_1458"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1466.JPG" alt="IMG_1466"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1474.JPG" alt="IMG_1474"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1476.JPG" alt="IMG_1476"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1477.JPG" alt="IMG_1477"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1478.JPG" alt="IMG_1478"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1480.JPG" alt="IMG_1480"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1482.JPG" alt="IMG_1482"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1511.JPG" alt="IMG_1511"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1512.JPG" alt="IMG_1512"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1515.JPG" alt="IMG_1515"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1521.JPG" alt="IMG_1521"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1523.JPG" alt="IMG_1523"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1527.JPG" alt="IMG_1527"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1540.JPG" alt="IMG_1540"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1553.JPG" alt="IMG_1553"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1555.JPG" alt="IMG_1555"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1600.JPG" alt="IMG_1600"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1603.JPG" alt="IMG_1603"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1612.JPG" alt="IMG_1612"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1613.JPG" alt="IMG_1613"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1655.JPG" alt="IMG_1655"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1665.JPG" alt="IMG_1665"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1680.JPG" alt="IMG_1680"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1681.JPG" alt="IMG_1681"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1688.JPG" alt="IMG_1688"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1707.JPG" alt="IMG_1707"></a>
-                    <a class="full-gallery-item" href="#"><img loading="lazy" src="imagenes/IMG_1708.JPG" alt="IMG_1708"></a>
+                    <!-- Las imágenes se cargarán dinámicamente -->
                 </div>
             </div>
         </section>
@@ -89,6 +39,33 @@
         </div>
     </main>
 
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            fetch('_data/contenido.json')
+                .then(response => response.json())
+                .then(data => {
+                    const urlParams = new URLSearchParams(window.location.search);
+                    const eventName = urlParams.get('event') || data.gallery.events[0].name;
+                    
+                    const event = data.gallery.events.find(e => e.name === eventName);
+
+                    if (event) {
+                        document.getElementById('gallery-title').textContent = event.name;
+                        document.getElementById('gallery-description').textContent = `Todas las fotos de ${event.name}`;
+                        const galleryGrid = document.querySelector('.full-gallery-grid');
+                        galleryGrid.innerHTML = '';
+                        event.images.forEach(imageSrc => {
+                            const item = document.createElement('a');
+                            item.className = 'full-gallery-item';
+                            item.href = '#';
+                            item.innerHTML = `<img loading="lazy" src="${imageSrc}" alt="${event.name}">`;
+                            galleryGrid.appendChild(item);
+                        });
+                    }
+                })
+                .catch(error => console.error('Error loading gallery data:', error));
+        });
+    </script>
     <script src="script.js"></script>
 </body>
 </html>
