--- a/index.html
+++ b/index.html
@@ -205,19 +205,19 @@
             <h2>Galería de Eventos</h2>
             <p>Elige un evento para ver las fotos</p>
                 <div class="gallery-grid">
-                <a href="gallery.html" class="gallery-item">
+                <a href="gallery.html?event=Evento%201" class="gallery-item">
                     <img src="imagenes/IMG_1708.JPG" alt="Evento 1">
                     <div class="gallery-overlay">
                         <h3>Evento 1</h3>
                     </div>
                 </a>
-                <a href="gallery.html" class="gallery-item">
+                <a href="gallery.html?event=Evento%202" class="gallery-item">
                     <img src="imagenes/IMG_1708.JPG" alt="Evento 2">
                     <div class="gallery-overlay">
                         <h3>Evento 2</h3>
                     </div>
                 </a>
-                <a href="gallery.html" class="gallery-item">
+                <a href="gallery.html?event=Evento%203" class="gallery-item">
                     <img src="imagenes/IMG_1708.JPG" alt="Evento 3">
                     <div class="gallery-overlay">
                         <h3>Evento 3</h3>
